--- a/sfeos-web/package.json
+++ b/sfeos-web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "maplibre-gl": "^5.9.0",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-map-gl": "^8.1.0",
     "react-scripts": "5.0.1",
